# DSATutor

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.sh
frontend/: index.html  script.js  style.css
server/: app.py  deterministic_grader.py  env.py  gemini_client.py  grader.py  models.py  tasks.py
